# moun

./: .gitignore  CLAUDE.md  deploy.sh
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_effective_from_group_id.py  0002_add_transaction_name.py  0002_add_user_and_multiuser_fks.py  0003_add_auth_fields_to_user.py  0003_add_end_date.py  0003_remove_salary_fields.py  0004_add_kakao_id.py  0004_add_salary_day.py  0005_add_income_scheduled_day.py  0005_scheduled_transactions.py  0006_add_frequency.py  0006_remove_budget_cycle.py  0007_add_is_excluded.py  0008_unique_scheduled_transaction.py  0009_space_core.py  0010_space_finance_tables.py  0011_transaction_type.py  0012_fixed_expense_type.py  0013_voucher.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  budget_cycles.py  cards.py  categories.py  fixed_expenses.py  incomes.py  settings.py  space_budget_cycles.py  space_categories.py  space_fixed_expenses.py  space_incomes.py  space_transactions.py  spaces.py  transactions.py  vouchers.py
backend/app/core/: auth.py  billing.py  budget_calculator.py  budget_cycle.py  config.py  date_occurrence.py  deps.py  salary_confirmation.py  schedule_generator.py  space_budget_calculator.py  (+1 more)
backend/app/db/: base.py  (+1 more)
backend/scripts/: seed_test_data.py
backend/tests/: conftest.py  test_auth_api.py  test_billing.py  test_budget_calculator.py  test_budget_cycle.py  test_salary_confirmation.py  test_spaces_api.py  test_vouchers.py
(+147 files in other folders)
